# rs4acap

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  default.nix  docker.sh  flake.nix  manifest.json  rust-toolchain.toml  shell.nix
crates/acap-build/: Cargo.toml  README.md
crates/acap-build-tester/: Cargo.toml
crates/acap-build-tester/src/: commands.rs  input.rs  invocation.rs  main.rs  output.rs  source.rs
crates/acap-build-tester/src/commands/: fuzz.rs  replay.rs
crates/acap-build/src/: conservative.rs  lib.rs  main.rs  schema.rs
crates/acap-build/tests/: equivalence.rs  fuzz.rs
crates/acap-build/tests/data/directory_http_config_app/: LICENSE  manifest.json
crates/acap-build/tests/data/empty_http_config_app/: manifest.json
crates/acap-build/tests/data/example_app/: manifest.json  post-install.sh  pre-uninstall.sh
crates/acap-build/tests/data/non_ascii_app/: manifest.json
crates/acap-build/tests/data/schema_1_3_app/: manifest.json
crates/acap-build/tests/invocations/directory_http_config_app/: aarch64.json
crates/acap-build/tests/invocations/empty_http_config_app/: arm.json
crates/authentication/: Cargo.toml
crates/authentication/src/: lib.rs  login.rs  store.rs
crates/cassette-testing/: Cargo.toml
crates/cassette-testing/src/: cassette.rs  lib.rs  library.rs  serde.rs
crates/cli4a/: Cargo.toml
crates/cli4a/src/: main.rs
crates/cli4a/src/commands/: install.rs
crates/device-finder/: Cargo.toml  package.nix
crates/device-finder/src/: commands.rs  main.rs
crates/device-finder/src/commands/: discover_devices.rs
crates/device-inventory/: Cargo.toml
crates/device-inventory/src/: authentication.rs  commands.rs  db.rs  db_vlt.rs  env.rs  fusion.rs  lib.rs  main.rs  mdns_source.rs  psst.rs  vlt.rs
crates/device-inventory/src/commands/: abandon.rs  activate.rs  add.rs  adopt.rs  deactivate.rs  dump.rs  ensure.rs  export.rs  for_each.rs  import.rs  list.rs  load.rs  login.rs  remove.rs  return.rs  search.rs  sync.rs
crates/device-inventory/test-data/: devices.json  get-loans-response.json
crates/device-inventory/tests/: import_and_export_loans.rs
crates/device-manager/: Cargo.toml
crates/device-manager/src/: commands.rs  lib.rs  main.rs  restart_detector.rs  ssh_keygen.rs
crates/device-manager/src/commands/: init.rs  reinit.rs  restore.rs  upgrade.rs
crates/dut/: Cargo.toml
crates/dut/src/: lib.rs
crates/eap/: Cargo.toml  README.md
crates/eap/src/: archive.rs  command_utils.rs  lib.rs  original_manifest.rs  schema.rs
crates/eap/src/archive/: compatible.rs  equivalent.rs
crates/eap/src/files/: cgi_conf.rs  manifest.rs  package_conf.rs  param_conf.rs
crates/fimage/: Cargo.toml
crates/fimage/src/: archive.rs  commands.rs  info.rs  lib.rs  main.rs
crates/fimage/src/commands/: extract.rs  inspect.rs
crates/fimage/tests/: fimages.rs
crates/firmware-inventory/: Cargo.toml
crates/firmware-inventory/src/: commands.rs  db.rs  lib.rs  main.rs  scrape.rs  version.rs
crates/firmware-inventory/src/commands/: dump.rs  get.rs  list.rs  load.rs  login.rs  update.rs
crates/rs4a/: Cargo.toml
crates/rs4a/src/: commands.rs  main.rs  psst.rs  vlt.rs
crates/rs4a/src/commands/: discover_devices.rs  export_loans.rs
crates/rs4a/tests/: export_loans.rs
crates/vapix/: Cargo.toml
crates/vapix/examples/: print_event_instances.rs
crates/vapix/src/: apis.rs  axis_cgi.rs  cassette.rs  client.rs  client_blocking.rs  config.rs  http.rs  json_rpc.rs  json_rpc_http.rs  json_rpc_http_blocking.rs  lib.rs  protocol_helpers.rs  requests.rs  rest.rs  rest_http.rs  rest_http2.rs  services.rs  soap.rs  soap_http.rs
crates/vapix/src/apis/: config.rs
crates/vapix/src/apis/axis_cgi/: api_discovery_1.rs  basic_device_info_1.rs  firmware_management_1.rs  jpg_3.rs  network_settings_1.rs  parameter_management.rs  pwdgrp.rs  system_ready_1.rs
crates/vapix/src/apis/config/: discover.rs  siren_and_light_2_alpha.rs  ssh_1.rs
crates/vapix/src/apis/services/: action1.rs  event1.rs
crates/vapix/src/axis_cgi/: api_discovery_1.rs  applications_config.rs  basic_device_info_1.rs  firmware_management_1.rs  jpg_3.rs  network_settings_1.rs  param.rs  parameter_management.rs  prod_brand_info_1.rs  pwdgrp.rs  system_ready_1.rs
crates/vapix/src/axis_cgi/basic_device_info_1/: get_all_properties_1_3.json  get_all_unrestricted_properties_200.json
crates/vapix/src/config/: discover.rs  recording_group_1.rs  recording_group_2.rs  remote_object_storage_1.rs  remote_object_storage_1_beta.rs  siren_and_light_2_alpha.rs  ssh_1.rs
crates/vapix/src/protocol_helpers/: http.rs  json_rpc.rs  json_rpc_http.rs  rest.rs  rest_http.rs  soap.rs  soap_http.rs
crates/vapix/src/services/: action1.rs  event1.rs
crates/vapix/tests/: blocking.rs  cassette_tests.rs  serde.rs  smoke_tests.rs
crates/vapix/tests/cassette_tests/: manifest.json
crates/vapix/tests/serde/: system_ready_1_preview_mode.json
crates/vapix/tests/snapshots/: add_action_configuration.xml  add_action_rule.xml  add_user_data.json  add_user_path.txt  get_action_configurations.xml  get_action_rules.xml  serde__can_serialize_action_1_requests-2.snap  serde__can_serialize_action_1_requests-3.snap  serde__can_serialize_action_1_requests-4.snap  serde__can_serialize_action_1_requests-5.snap  serde__can_serialize_action_1_requests.snap  serde__can_serialize_recording_group_2_create_request-2.snap  serde__can_serialize_recording_group_2_create_request.snap  serde__can_serialize_ssh_1_add_user_requests-2.snap  serde__can_serialize_ssh_1_add_user_requests.snap  serde__can_serialize_ssh_1_set_user_requests-2.snap  serde__can_serialize_ssh_1_set_user_requests.snap  set_user_data.json  set_user_path.txt
crates/vlt/: Cargo.toml
crates/vlt/src/: authentication.rs  client.rs  lib.rs  requests.rs  responses.rs
crates/vlt/tests/: serde.rs
crates/vlt/tests/responses/: get_devices_with_portcast_device.json  get_devices_without_portcast_device.json  get_loans_empty.json  get_loans_non_empty.json  get_loans_os_upgrading.json  get_loans_radar.json  post_loans_days.json  post_loans_hours.json
(+359 files in other folders)
