[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.97"
clap = "4.5.35"
dirs = "6.0.0"
env_logger = "0.11.8"
futures-util = "0.3.31"
itertools = "0.14.0"
log = "0.4.27"
mdns = "3.0.0"
reqwest = { version = "0.12.15", default-features = false, features = ["charset", "http2", "rustls-tls"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.0.0"
url = "2.5.4"

rs4a-vapix = { path = "crates/vapix" }

[workspace.package]
edition = "2021"
