[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.97"
base32 = "0.5.1"
base64 = "0.22.1"
chrono = "0.4.42"
clap = "4.5.35"
clap_complete = "4.5.50"
dirs = "6.0.0"
env_logger = "0.11.8"
expect-test = "1.5.1"
futures-util = "0.3.31"
glob = "0.3.2"
insta = "1.43.2"
itertools = "0.14.0"
log = "0.4.27"
macaddr = "1.0.1"
mdns = "3.0.0"
quick-xml = "0.38.3"
regex = "1.11.3"
reqwest = { version = "0.12.15", default-features = false, features = ["charset", "http2", "rustls-tls"] }
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.17"
tokio = "1.0.0"
url = "2.5.4"

rs4a-bin-utils = {path = "crates/bin-utils" }
rs4a-dut = { version = "0.1", path = "crates/dut" }
rs4a-vapix = { path = "crates/vapix" }
rs4a-vlt = { path = "crates/vlt" }

[workspace.package]
edition = "2021"
