[package]
name = "rs4a-acap-build-tester"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
env_logger = { workspace = true }
libtest-mimic = { workspace = true }
proptest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }

acap-build = { workspace = true }
rs4a-eap = { workspace = true }

[lints]
workspace = true
