[package]
name = "acap-build"
version = "0.0.0"
edition = "2021"
readme = "README.md"
license = "MIT"
description = "Utilities for creating Embedded Application Packages (EAPs)"
homepage = "https://github.com/apljungquist/rs4acap"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
env_logger = { workspace = true }
log = { workspace = true }
tempfile = { workspace = true }
tempdir = { workspace = true }

rs4a-eap.workspace = true

[dev-dependencies]
expect-test.workspace = true
proptest.workspace = true
serde_json.workspace = true

[lints]
workspace = true
