[package]
name = "rs4a-authentication"
version = "0.1.0"
edition.workspace = true
license = "MIT"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
base32 = { workspace = true }
dirs = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["cookies", "json", "http2", "rustls-tls"] }
regex = { workspace = true }
url = { workspace = true }
