[package]
name = "rs4a-cassette-testing"
version = "0.1.0"
edition.workspace = true
license = "MIT"
description = "Cassette recording and playback infrastructure for rs4a-vapix"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rs4a-vapix = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
