[package]
name = "cli4a"
version = "0.1.0"
edition.workspace = true
license = "MIT"
description = "A collection of development tools"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
glob = { workspace = true }
log = { workspace = true }
semver = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }

rs4a-device-manager = { workspace = true }
rs4a-firmware-inventory = { workspace = true }
rs4a-bin-utils = { workspace = true }
rs4a-vapix = { workspace = true, features = ["clap"] }
