[package]
name = "rs4a-device-manager"
version = "0.1.0"
edition.workspace = true
license = "MIT"

[lints]
workspace = true

[[bin]]
name = "device-manager"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
log = { workspace = true }
semver = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "fs"] }
url = { workspace = true }

rs4a-bin-utils = { workspace = true }
rs4a-vapix = { workspace = true, features = ["clap"] }
