[package]
name = "rs4a-dut"
version = "0.1.0"
edition.workspace = true
license = "MIT"
description = "Framework for specifying and inferring what DUT to target"

[dependencies]
anyhow = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
