[package]
name = "rs4a-eap"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"
description = "Utilities for creating Embedded Application Packages (EAPs)"
homepage = "https://github.com/apljungquist/rs4acap"

[dependencies]
anyhow = { workspace = true }
jsonschema = { workspace = true }
log = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
regex = { workspace = true }

[dev-dependencies]
expect-test.workspace = true
