[package]
name = "rs4a-eap"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"
description = "Utilities for creating Embedded Application Packages (EAPs)"
homepage = "https://github.com/apljungquist/rs4acap"

[features]
## Implement clap traits for some types to make them easier to expose on a CLI
clap = ["dep:clap"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"], optional = true }
flate2 = { workspace = true }
jsonschema = { workspace = true }
log = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
