[package]
name = "firmware-inventory"
version = "0.1.0"
edition.workspace = true
license = "MIT"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
dirs = { workspace = true }
glob = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json", "http2", "rustls-tls"] }
semver = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }

rs4a-authentication = { workspace = true }
rs4a-bin-utils = { workspace = true }
rs4a-vlt = { workspace = true }
