[package]
name = "rs4a"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
rs4a-vapix = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
url = { workspace = true }
zeroconf = { workspace = true }
