[package]
name = "rs4a-vapix"
version = "0.1.0"
edition.workspace = true
license = "MIT"
description = "Utilities for working with VAPIX"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
base64 = { workspace = true }
quick-xml = { workspace = true, features = ["serialize"] }
rs4a-dut = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
url = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
