[package]
name = "rs4a-vapix"
version = "0.1.0"
edition.workspace = true
license = "MIT"
description = "Utilities for working with VAPIX"

[dependencies]
anyhow = { workspace = true }
base32 = { workspace = true }
clap = { workspace = true, optional = true }
digest_auth = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["json", "http2"] }
serde = { workspace = true, features = ["derive"] }
quick-xml = { workspace = true, features = ["serialize"] }
rs4a-dut = { workspace = true }
semver = { workspace = true, features = ["serde"] }
serde_json = { workspace = true, features = ["raw_value"] }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
expect-test = { workspace = true }
libtest-mimic = { workspace = true }
rs4a-cassette-testing = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

[features]
default = ["reqwest/rustls-tls"]

[[test]]
name = "cassette_tests"
harness = false
